z-index code fixed

--- a/CiarnuroRT/webapp/style.css
+++ b/CiarnuroRT/webapp/style.css
@@ -414,7 +414,7 @@ div.banner{
 
 #playerEven:nth-child(even) {
     background-color: rgba(128, 128, 128, 0.4);
-    z-index: -100; 
+    z-index: -1; 
 }
 
 #soloButton{
